# xotl.tools

./: .dir-locals.el  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTE.rst  CONTRIBUTING.rst  HISTORY  HISTORY.rst  HISTORY.txt  LICENCE  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  README.txt  appveyor.yml  backlog-2.0.0.org  backlog.org  debug.sh  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini  tox32.ini  tox33.ini  versioneer.py
ci/: cleanup.yml
cli/: __init__.py
docs/: HISTORY.txt  Makefile  readme.txt
docs/source/: .dir-locals.el  BACKLOG.rst  CONTRIBUTING.rst  CONTRIBUTORS.rst  HISTORY.rst  LICENCE.rst  LICENSE.rst  conf.py  index.rst  others.rst  xoutil.rst
docs/source/_static/: custom.css
docs/source/backlog/: backlog-monads.rst  backlog-six2eight.rst  glob.rst  inspect.rst  misc.rst
docs/source/history/: _changes-1.5.0.rst  _changes-1.5.1.rst  _changes-1.5.2.rst  _changes-1.5.3.rst  _changes-1.5.4.rst  _changes-1.5.5.rst  _changes-1.5.6.rst  _changes-1.6.0.rst  _changes-1.6.1.rst  _changes-1.6.10.rst  _changes-1.6.11.rst  _changes-1.6.2.rst  _changes-1.6.3.rst  _changes-1.6.4.rst  _changes-1.6.5.rst  _changes-1.6.6.rst  _changes-1.6.7.rst  _changes-1.6.8.rst  _changes-1.6.9.rst  _changes-1.7.0.rst  _changes-1.7.1.rst  _changes-1.7.10.rst  _changes-1.7.11.rst  _changes-1.7.12.rst  _changes-1.7.2.rst  _changes-1.7.3.rst  _changes-1.7.4.rst  _changes-1.7.5.rst  _changes-1.7.6.rst  _changes-1.7.7.rst  _changes-1.7.8.rst  _changes-1.7.9.rst  _changes-1.8.0.rst  _changes-1.8.1.rst  _changes-1.8.2.rst  _changes-1.8.3.rst  _changes-1.8.4.rst  _changes-1.8.5.rst  _changes-1.8.6.rst  _changes-1.8.7.rst  (+47 more)
docs/source/modules/: aop.rst  fs.rst
docs/source/pre-history/: 1.2.0.rst  1.2.1.rst  1.2.2.rst  1.2.3.rst  1.4.0.rst  1.4.2.rst  1.5.0.rst  1.5.2.rst  1.5.4.rst  1.6.0.rst  1.6.1.rst  1.6.11.rst  1.6.3.rst  1.6.4.rst  1.6.5.rst  1.6.6.rst  1.6.9.rst  1.7.11.rst  1.7.12.rst  1.7.3.rst  1.7.4.rst  1.7.5.rst  1.7.6.rst  1.7.8.rst  1.8.1.rst  1.8.2.rst  1.8.3.rst  1.8.4.rst  1.8.6.rst  1.9.0.rst  1.9.4.rst  1.9.5.rst  1.9.7.rst  (+13 more)
src/tests/: customizetestbed.py  test_bases.py  test_codecs.py  test_collections.py  test_context.py  test_datetime.py  test_decorators.py  test_fp.py  test_fs.py  test_functools.py  test_iterators.py  test_modules.py  test_symbols.py  test_types.py
tests/: customizetestbed.py  test_abc.py  test_annotations.py  test_api.py  test_bases.py  test_basic_aop.py  test_bound.py  test_classical_aop.py  test_cli.py  test_clisp.py  test_codecs.py  test_collections.py  test_context.py  test_contextlib.py  test_csv.py  test_datetime.py  test_decorators.py  test_dim.py  test_eight_exceptions.py  test_eight_string.py  test_fp.py  test_fs.py  test_functools.py  test_functools2.py  test_graphlib.py  test_infinity.py  test_inspect.py  test_iterators.py  test_keywords.py  test_logical.py  test_metaclass.py  test_mixins.py  test_modules.py  test_names.py  test_objects.py  test_params.py  test_pprint.py  test_proxy.py  test_records.py  test_routines.py  (+11 more)
tests/snapshots/: textwrap__textwrap_with_skip__0.txt
xotl/: __init__.py
xotl/tools/: __init__.py  _version.py  bases.py  bound.py  clipping.py  context.py  context.pyi  cpystack.py  crypto.py  deprecation.py  formatter.py  infinity.py  keywords.py  logical.py  modules.py  names.py  objects.py  objects.pyi  params.py  progress.py  records.py  release.py  string.py  symbols.py  tools.py  uuid.py  versions.py  web.py
xoutil/: __init__.py  _local.py  _meta2.py  _meta3.py  _values.py  annotate.py  aop.py  api.py  argparse.py  bases.py  bound.py  cli.py  clipping.py  collections.py  compat.py  connote.py  context.py  counter.py  cpystack.py  crypto.py  data.py  datetime.py  decorator.py  decorators.py  default_dict.py  deprecation.py  formatter.py  fs.py  functools.py  future.py  infinity.py  inspect.py  iterators.py  iterutils.py  json.py  keywords.py  logger.py  logical.py  mdeco.py  memoize.py  (+33 more)
xoutil/ahead/: __init__.py  collections.py  types.py
xoutil/aop/: __init__.py  basic.py  classical.py  extended.py
xoutil/api/: __init__.py  _errors.py
xoutil/benchmark/: mp.py
xoutil/cl/: __init__.py  args.py  ids.py  lisp.py  simple.py
xoutil/cli/: __init__.py  app.py  tools.py
xoutil/clutter/: __init__.py  values.py
xoutil/config/: __init__.py  argparse.py  parser.py
xoutil/decorator/: __init__.py  compat.py  development.py  meta.py  routines.py
xoutil/dim/: __init__.py  base.py  currencies.py  meta.py
xoutil/eight/: __init__.py  _errors.py  _errors2.py  _errors3.py  _meta.py  _meta2.py  _meta3.py  _mixin.py  _past2.py  _throw.py  _throw2.py  _throw3.py  _types.py  abc.py  datetime.py  exceptions.py  inspect.py  io.py  meta.py  mixins.py  queue.py  string.py  text.py  types.py  values.py
xoutil/fp/: __init__.py  _compose.py  iterators.py  option.py  params.py  prove.py  tools.py
xoutil/fs/: __init__.py  dupfind.py  path.py
xoutil/future/: __init__.py  _past.py  _rectify.py  calendar.py  codecs.py  collections.py  contextlib.py  csv.py  datetime.py  datetime.pyi  functools.py  inspect.py  itertools.py  json.py  mimetypes.py  pprint.py  string.py  subprocess.py  textwrap.py  threading.py  time.py  types.py  warnings.py
xoutil/html/: __init__.py
xoutil/lock/: __init__.py
xoutil/modules/: __init__.py
xoutil/monads/: __init__.py  checkers.py  option.py
xoutil/paste/: template.py
xoutil/six/: __init__.py  _meta2.py  _meta3.py  meta.py  types.py
xoutil/sketch/: __init__.py  mappingproxy.py  tree.py
xoutil/tasking/: __init__.py  _greenlet_local.py  lock.py  safe.py
xoutil/testing/: datetime.py
xoutil/tests/: customizetestbed.py  test_annotations.py  test_bases.py  test_basic_aop.py  test_classical_aop.py  test_collections.py  test_context.py  test_decorators.py  test_fs.py  test_functools.py  test_modules.py  test_overload.py  test_proxy.py  test_simple_memoize.py  testbed.py
xoutil/trees/: __init__.py  base.py  ptt.py
xoutil/validators/: __init__.py  args.py  identifiers.py
xoutil/values/: __init__.py  args.py  ids.py  simple.py  uuid.py
(+347 files in other folders)
