[project]
name = "xotl.tools"
description = "Collection of usefull algorithms and other very disparate stuff"
authors = [
   { name = "Merchise Autrement", email="info@merchise.de" }
]
license="MIT"
readme="README.rst"
requires-python = ">= 3.8"
homepage="https://gitlab.merchise.org/merchise/xotl.tools"
documentation="https://merchise-autrement.gitlab.io/xotl.tools/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typing-extensions>=3.10.0",
    "packaging>=23.2",
    "graphlib_backport; python_version < '3.9'"
]
dynamic = ["version"]

[dependency-groups]
typing = [
    "mypy~=1.11.0",
    "types-python-dateutil",
]
test = [
    "hypothesis~=6.91.0",
    "pytz>=2023.3.post1",
    "pytest~=7.4.4",
    "pytest-cov~=4.1.0",
    "pytest-xdist~=2.1",
    "coverage[toml]~=7.4.0",
    "tox~=4.16.0",
    "python-dateutil>=2.8.2",
    "pytest-insta~=0.2.0",
]
lint = [
    "ruff==0.8.*",
    "isort~=5.13.2",
]
tooling = [
    "sphinx>=7.1.2",
    "ipython~=8.12.3",
    "furo>=2024.1.29",
    "watchdog>=4.0",
]
dev = [
    { include-group="typing" },
    { include-group="lint" },
    { include-group="tooling" },
    { include-group="test" },
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/xotl/tools/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/xotl"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["xotl/tools"]
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = [
  "E501", # line-length is left to the formatter
  "E731", # do not assign a `lambda` expression, use a `def` (we use it a lot)
]
preview = true
exclude = ["src/xotl/tools/_version.py"]


[tool.ruff.format]
preview = true
exclude = ["src/xotl/tools/_version.py"]


[tool.coverage.run]
branch = false

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "pragma: no-cover",
  "def __repr__",
  "def __hash__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "return NotImplemented",
  "if __name__ == .__main__.:",
  "if t.TYPE_CHECKING:",
  "if TYPE_CHECKING:",
]

omit = [
    "xotl/tools/release.py",
    "xotl/tools/dim/base.py",
    # Files which are difficult to test in every platform
    "xotl/tools/tasking/_greenlet_local.py"
]

fail_under = 71
skip_covered = true
show_missing = true


[tool.pyright]
strictParameterNoneValue = false
useLibraryCodeForTypes = true
reportUnusedImport = true
reportUnusedClass = true
reportUnnecessaryCast = true
reportDuplicateImport = true
reportUnnecessaryTypeIgnoreComment = "warning"
reportShadowedImports = "warning"
stubPath = ""
include = [
  "xotl/tools",
]
