[metadata]
name = xotl.tools
version = attr:xotl.tools.release.VERSION
description = Collection of small utilities that have not yet being promoted to xotl.tools.
long_description = file: README.rst

author = Merchise Autrement [~º/~]
author_email = info@merchise.org
maintainer = Manuel Vázquez Acosta
license = MIT
url = https://gitlab.merchise.org/merchise/xotl.tools
project_urls =
   tracker=https://gitlab.merchise.org/merchise/xotl.tools/issues

classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Software Development :: Libraries :: Python Modules


[options]
zip_safe = False
packages = find:
package_dir =
      =src
namespace_packages =
    xotl
include_package_data = True
python_requires = >=3.7
install_requires =
   typing-extensions~=3.10.0

tests_require =
    tox

[options.packages.find]
where = src

[options.extras_require]
recommended =
    python-dateutil

docs =
    python-dateutil
 	hypothesis~=6.31
    pytz
    sphinx~=4.3.1
    sphinx-rtd-theme

dev =
	python-dateutil
    hypothesis~=6.31
    pytz
    sphinx~=4.3.1
    sphinx-rtd-theme
    flake8~=4.0
    flake8-bugbear~=21.4.3
    black==21.12b0
	isort~=5.9.3
    tox


[versioneer]
VCS = git
style = pep440
versionfile_source = xotl/tools/_version.py
versionfile_build = xotl/tools/_version.py
tag_prefix = ""


[bdist_wheel]
python-tag = py3

[flake8]
max-line-length = 100
exclude = .tox,.git,*/migrations/*,node_modules/*,tests/*,docs/*,build/*
ignore = E402,E731,E741,F405,W504,W503,E203,B011,E501

[pycodestyle]
max-line-length = 100
exclude = .tox,.git,*/migrations/*,node_modules/*,tests/*,docs/*,build/*
ignore = E402,E731,E741,F405,W504,W503,E203,B011,E501


[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
    if False

fail_under = 60

omit =
    xotl/tools/release.py
    xotl/tools/dim/base.py

    # Files which are difficult to test in every platform
    xotl/tools/tasking/_greenlet_local.py

skip_covered = true
